# api_gateway

./: Cargo.toml  Dockerfile
.github/workflows/: api_gateway_docker.yml
src/: main.rs  models.rs
src/services/: friendship_service.rs
