[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clerk-rs = { version = "0.4.0", features = ["actix"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
actix-governor = "0.8.0"